[Report] Improvements for reporting mchanisim

--- a/tpe_paw/frontend/src/locales/en.json
+++ b/tpe_paw/frontend/src/locales/en.json
@@ -87,7 +87,8 @@
         "whatIsWrong": "What is wrong with this snippet?",
         "unreport": "Do you want to unreport this snippet?",
         "confirm": "Confirm",
-        "cancel": "Cancel"
+        "cancel": "Cancel",
+        "alreadyReported": "You already reported and dismissed the report on this snippet"
       },
       "flagged": {
         "title": "Flagged Snippet",
@@ -302,6 +303,9 @@
     },
     "success": {
       "defaultMessage": "Action performed correctly"
+    },
+    "warning": {
+      "defaultMessage": "You can't perform that action"
     },
     "hide": "hide"
   },
