--- a/tpe_paw/frontend/src/locales/es.json
+++ b/tpe_paw/frontend/src/locales/es.json
@@ -87,7 +87,9 @@
           "whatIsWrong": "Qué hay de malo con este snippet?",
           "unreport": "Quieres anular el reporte de este snippet?",
           "confirm": "Confirmar",
-          "cancel": "Cancelar"
+          "cancel": "Cancelar",
+          "alreadyReported": "Ya reportaste y anulaste el reporte de este snippet"
+
         },
         "flagged": {
           "title": "Snippet Marcado",
@@ -301,6 +303,9 @@
       },
       "success": {
         "defaultMessage": "Acción realizada de forma exitosa"
+      },
+      "warning": {
+        "defaultMessage": "No puedes realizar esa acción"
       },
       "hide": "ocultar"
     },
