--- a/tpe_paw/frontend/src/locales/en.json
+++ b/tpe_paw/frontend/src/locales/en.json
@@ -88,7 +88,10 @@
         "unreport": "Do you want to unreport this snippet?",
         "confirm": "Confirm",
         "cancel": "Cancel",
-        "alreadyReported": "You already reported and dismissed the report on this snippet"
+        "alreadyReported": "You already reported and dismissed the report on this snippet",
+        "success": "Successfully reported snippet",
+        "successUnreport": "Succesffully unreported snippet"
+
       },
       "flagged": {
         "title": "Flagged Snippet",
