[Dates] Fixed problems with date offsets

--- a/tpe_paw/frontend/src/locales/en.json
+++ b/tpe_paw/frontend/src/locales/en.json
@@ -245,7 +245,8 @@
   "components": {
     "tfDatePicker": {
       "defaultLabel": "Select Date",
-      "clearDate": "Clear Date"
+      "clearDate": "Clear Date",
+      "datePickerTextDate": "{month}/{day}/{year}"
     },
     "shared": {
       "pagination": {
