--- a/tpe_paw/frontend/src/locales/es.json
+++ b/tpe_paw/frontend/src/locales/es.json
@@ -244,7 +244,8 @@
     "components": {
       "tfDatePicker": {
         "defaultLabel": "Elegir fecha",
-        "clearDate": "Borrar fecha"
+        "clearDate": "Borrar fecha",
+        "datePickerTextDate": "{day}/{month}/{year}"
       },
       "shared": {
         "pagination": {
