More todos and microfixes

--- a/tpe_paw/frontend/src/locales/en.json
+++ b/tpe_paw/frontend/src/locales/en.json
@@ -90,8 +90,8 @@
         "cancel": "Cancel",
         "alreadyReported": "You already reported and dismissed the report on this snippet",
         "success": "Successfully reported snippet",
-        "successUnreport": "Succesffully unreported snippet"
-
+        "successUnreport": "Succesffully unreported snippet",
+        "errorLoading": "Error while loading snippet"
       },
       "flagged": {
         "title": "Flagged Snippet",
@@ -108,7 +108,7 @@
       "snippetRestored": "Successfully restored snippet",
       "snippetFlagged": "Succesfully flagged snippet",
       "snippetUnflagged": "Sucecesfully unflagged snippet",
-      "copiedToClipboard": "Code copied to clipboard!"
+      "copiedToClipboard": "Code copied to clipboard!",
     },
     "postingDate": "{month}/{day}/{year}"
   },
@@ -224,8 +224,11 @@
     "mailSentInfo": "You can now visit the link we sent you and change your password.",
     "enterCode": "Enter the code you received on your email.",
     "successfulVerification": "Successfully verified account!",
-    "successfullyResetPassword": " Successfully reseted password. Now you can login",
-    "keepMeSignedIn": "Keep me signed in"
+    "successfullyResetPassword": "Successfully reseted password. Now you can login",
+    "keepMeSignedIn": "Keep me signed in",
+    "errorEmail": "Error while sending recovery email",
+    "errorVerification": "Error while verifying your account",
+    "errorResetPassword": "Error while verifying your password"
   },
   "validations": {
     "invalidPassword": "Password must be at least 8 characters long",
