--- a/tpe_paw/frontend/src/locales/es.json
+++ b/tpe_paw/frontend/src/locales/es.json
@@ -88,7 +88,7 @@
           "unreport": "Quieres anular el reporte de este snippet?",
           "confirm": "Confirmar",
           "cancel": "Cancelar",
-          "alreadyReported": "Ya reportaste y anulaste el reporte de este snippet",
+          "alreadyReported": "Ya reportaste el snippet y el reporte fue anulado por el dueño",
           "success": "Snippet reportado con éxito",
           "successUnreport": "El snippet ya no esta mas reportado",
           "successDismissedAllReports": "Se eliminaron todos los reportes del snippet",
