--- a/tpe_paw/frontend/src/locales/en.json
+++ b/tpe_paw/frontend/src/locales/en.json
@@ -100,6 +100,11 @@
           "dismissAllReports": "Dismiss all reports"
         }
       },
+      "edit": "Edit",
+      "done": "Save",
+      "cancel": "Cancel",
+      "successEditing": "Successfully updated snippet!",
+      "errorEditing": "Error updating snippet",
       "flagged": {
         "title": "Flagged Snippet",
         "text1": "The following snippet has been marked as incorrect by the administrator.",
