--- a/tpe_paw/frontend/src/locales/es.json
+++ b/tpe_paw/frontend/src/locales/es.json
@@ -100,6 +100,11 @@
             "dismissAllReports": "Eliminar reportes"
           }
         },
+        "edit": "Editar",
+        "done": "Guardar",
+        "cancel": "Cancelar",
+        "successEditing": "Snippet actualizado con éxito!",
+        "errorEditing": "Error al actualizar el snippet",
         "flagged": {
           "title": "Snippet Marcado",
           "text1": "El siguiente snippet ha sido marcado como incorrecto por el administrador.",
