[Snippet] Fix authorization for snippet edit

--- a/tpe_paw/webapp/src/main/resources/i18n/messages.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages.properties
@@ -133,6 +133,7 @@ error.401.snippet.report=Unauthorized access! You can only report snippets when 
 error.403.snippet.report.reputation=Unauthorized access! You can only report snippets when you are have a high enough reputation.
 error.403.snippet.report.owner=Unauthorized access! You cannot report your own snippet!
 error.403.snippet.report.repeated= You cant report the same snippet twice
+error.403.snippet.edit=Unauthorized access! You can't edit this snippet!
 error.401.snippet.flag=Unauthorized access! Only admins can flag snippets.
 error.403.snippet.create=Forbidden access! You can't create snippets
 error.401.tag.follow=Unathorized access! You must be logged in to follow a tag
