--- a/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
@@ -134,6 +134,7 @@ error.403.snippet.report.reputation=¡Acceso no autorizado! Solo puedes reportar
 error.403.snippet.report.owner=¡Acceso no autorizado! No puedes reportar tus propios snippets.
 error.403.snippet.report.repeated= No puedes reportar el mismo snippet varias veces
 error.403.snippet.report.dismiss=¡Acceso no autorizado! Solo el dueño del snippet puede descartar reportes.
+error.403.snippet.edit=¡Acceso no autorizado! No puedes editar este snippet.
 error.401.snippet.flag=¡Acceso no autorizado! Solo los administradores pueden marcar snippets
 error.403.snippet.create=Acceso no autorizado! No puedes crear snippets
 error.401.tag.follow=¡Acceso no autorizado! Solo puedes seguir tags si inicias sesión
