--- a/tpe_paw/webapp/src/main/resources/i18n/messages_en.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages_en.properties
@@ -134,6 +134,7 @@ error.403.snippet.report.reputation=Unauthorized access! You can only report sni
 error.403.snippet.report.owner=Unauthorized access! You cannot report your own snippet!
 error.403.snippet.report.repeated= You cant report the same snippet twice
 error.403.snippet.report.dismiss=Unauthorized access! Only snippet owners can dismiss reports!
+error.403.snippet.edit=Unauthorized access! You can't edit this snippet!
 error.401.snippet.flag=Unauthorized access! Only admins can flag snippets.
 error.403.profile.owner=Unauthorized access! This content can only be viewed by the owner of the profile.
 error.403.snippet.create=Forbidden access! You can't create snippets
